# all-relative

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml
all_relative/: cli.py  main.py  parsers.py
tests/: base_test.py  conftest.py  test_css.py  test_html.py
tests/templates/: base.html
