[tool.poetry]
name = "all-relative"
version = "0.1.8"
description = "cli tool to convert a static site to use only relative urls"
authors = ["Ivan Gonzalez <scratchmex@gmail.com>"]
readme = "README.md"
repository = "https://github.com/scratchmex/all-relative"

[tool.poetry.scripts]
all-relative = "all_relative.main:main"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
mypy = {git = "https://github.com/python/mypy"}
black = "^20.8b1"
pytest = "^6.2.1"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
